Style:#31 - setting custom color about black

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -10,6 +10,7 @@
      Colors (색상)
      ======================================================================== */
   --color-white: #ffffff;
+  --color-black: #1e2128;
   --color-ui-background: #ffffff;
   --color-ui-background-primary-soft: #d3e3ff;
   --color-primary-01: #4c82f7;
