--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -37,7 +37,7 @@
   --color-error: #ff5f5f;
   --color-snackbar: #515660;
   --color-delete: #ff5f5f;
-  --color-timer: #69D7C4;
+  --color-timer: #69d7c4;
 
   /* Goal Colors */
   --color-goal-red: #ff6b6b;
@@ -55,7 +55,6 @@
   --color-heatmap-3: #4c82f7;
   --color-heatmap-4: #1a59e1;
   --color-heatmap-accent: #eeba06;
-  
 
   --color-sidebar-hover: #f7f7f7;
 
