--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -38,6 +38,7 @@
   --color-snackbar: #515660;
   --color-delete: #ff5f5f;
   --color-timer: #69d7c4;
+  --color-Gray_01:#515660;
 
   /* Goal Colors */
   --color-goal-red: #ff6b6b;
