--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -39,6 +39,7 @@
   --color-delete: #ff5f5f;
   --color-timer: #69d7c4;
   --color-Gray_01:#515660;
+  --color-background:#F4F7FB;
 
   /* Goal Colors */
   --color-goal-red: #ff6b6b;
