chore(prettier): auto-format globals.css

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -38,8 +38,8 @@
   --color-snackbar: #515660;
   --color-delete: #ff5f5f;
   --color-timer: #69d7c4;
-  --color-Gray_01:#515660;
-  --color-background:#F4F7FB;
+  --color-Gray_01: #515660;
+  --color-background: #f4f7fb;
 
   /* Goal Colors */
   --color-goal-red: #ff6b6b;
