refactor: merge goallistdashboardcard and card component

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -40,6 +40,7 @@
   --color-timer: #69d7c4;
   --color-Gray_01: #515660;
   --color-background: #f4f7fb;
+  --color-cardContainer: #e5ecf5;
 
   /* Goal Colors */
   --color-goal-red: #ff6b6b;
