--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -271,6 +271,11 @@
   font-weight: 700;
 }
 
+@utility text-logo-32 {
+  font-size: 32px;
+  font-weight: 700;
+}
+
 @utility text-logo-24 {
   font-size: 24px;
   font-weight: 500;
@@ -284,6 +289,11 @@
 @utility text-banner-44-bold {
   font-size: 44px;
   font-weight: 700;
+}
+
+@utility text-banner-24 {
+  font-size: 24px;
+  font-weight: 500;
 }
 
 /* ========================================================================
