--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -253,6 +253,11 @@
   font-weight: 700;
   line-height: 30px;
 }
+@utility text-display-18 {
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 30px;
+}
 @utility text-head-20 {
   font-size: 20px;
   font-weight: 600;
