style: Add soft primary color variable to globals.css

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -24,6 +24,7 @@
   /* Primary Colors */
   --color-primary-01: #4c82f7;
   --color-primary-01-hover: #6696fa;
+  --color-primary-soft: #d3e3ff;
 
   /* Secondary Colors */
   --color-secondary-01: #ffd84d;
