--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -544,3 +544,25 @@
 .icon-info path {
   fill: #4c82f7 !important;
 }
+
+/* 에러 아이콘 */
+.error-icon {
+  fill: none !important;
+}
+.error-icon path:first-child {
+  stroke: #e4e8f0 !important;
+}
+.error-icon path:nth-child(2) {
+  fill: #e4e8f0 !important;
+  stroke: #e4e8f0 !important;
+}
+.error-icon rect {
+  fill: #e4e8f0 !important;
+  stroke: #e4e8f0 !important;
+}
+.error-icon circle {
+  fill: #515660 !important;
+}
+.error-icon path:last-child {
+  fill: #515660 !important;
+}
