--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -566,3 +566,29 @@
 .general-error-icon path:last-child {
   fill: #515660 !important;
 }
+
+/* 404 에러 아이콘 */
+.notfound-error-icon {
+  fill: none !important;
+}
+.notfound-error-icon path:first-child {
+  fill: #c3cad6 !important;
+}
+.notfound-error-icon path:nth-child(2) {
+  fill: #c3cad6 !important;
+}
+.notfound-error-icon path:nth-child(3) {
+  fill: #c3cad6 !important;
+}
+.notfound-error-icon circle:first-child {
+  fill: #667077 !important;
+}
+.notfound-error-icon circle:nth-child(2) {
+  fill: #667077 !important;
+}
+.notfound-error-icon path:nth-child(4) {
+  fill: #667077 !important;
+}
+.notfound-error-icon path:last-child {
+  fill: #c3cad6 !important;
+}
