--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -142,9 +142,9 @@
   }
 
   /* 기본 리스트 스타일 제거를 TipTap에서만 제외 */
-  ul:not(.ProseMirror ul),
-  ol:not(.ProseMirror ol),
-  li:not(.ProseMirror li) {
+  ul:not(.ProseMirror ul):not(.prose ul):not(.prose div ul):not(.prose * ul),
+  ol:not(.ProseMirror ol):not(.prose ol):not(.prose div ol):not(.prose * ol),
+  li:not(.ProseMirror li):not(.prose li):not(.prose div li):not(.prose * li) {
     list-style: none;
   }
 
@@ -203,34 +203,6 @@
     margin: 0;
     padding: 0;
     max-width: 100%;
-  }
-
-  .prose ul {
-    list-style-type: disc;
-    margin-left: 1.5rem;
-    padding-left: 0;
-  }
-
-  /* 불릿 색상 진하게 */
-  .prose ul li::marker {
-    color: var(--color-text-01);
-  }
-
-  /* 번호도 진하게 */
-  .prose ol li::marker {
-    color: var(--color-text-01);
-    font-weight: 600;
-  }
-
-  .prose ol {
-    list-style-type: decimal;
-    margin-left: 1.5rem;
-    padding-left: 0;
-  }
-
-  .prose li {
-    display: list-item;
-    margin: 0.25rem 0;
   }
 }
 
@@ -591,4 +563,68 @@
 }
 .notfound-error-icon path:last-child {
   fill: #c3cad6 !important;
+}
+
+/* ========================================================================
+   강제 리스트 스타일 적용 (최고 우선순위)
+   ======================================================================== */
+/* prose 클래스 내의 리스트 요소들에 강제로 스타일 적용 */
+.prose ul,
+.prose ul ul,
+.prose div ul,
+.prose div div ul,
+div.prose ul,
+div.prose div ul,
+[class*='prose'] ul {
+  list-style-type: disc !important;
+  list-style-position: outside !important;
+  margin-left: 24px !important;
+  padding-left: 0 !important;
+  display: block !important;
+}
+
+.prose ol,
+.prose ol ol,
+.prose div ol,
+.prose div div ol,
+div.prose ol,
+div.prose div ol,
+[class*='prose'] ol {
+  list-style-type: decimal !important;
+  list-style-position: outside !important;
+  margin-left: 24px !important;
+  padding-left: 0 !important;
+  display: block !important;
+}
+
+.prose li,
+.prose ul li,
+.prose ol li,
+.prose div li,
+.prose div ul li,
+.prose div ol li,
+div.prose li,
+div.prose ul li,
+div.prose ol li,
+[class*='prose'] li {
+  display: list-item !important;
+  margin: 4px 0 !important;
+  list-style: inherit !important;
+}
+
+.prose ul li::marker,
+.prose div ul li::marker,
+div.prose ul li::marker,
+[class*='prose'] ul li::marker {
+  color: #1f2937 !important;
+  font-size: 16px !important;
+}
+
+.prose ol li::marker,
+.prose div ol li::marker,
+div.prose ol li::marker,
+[class*='prose'] ol li::marker {
+  color: #1f2937 !important;
+  font-weight: 600 !important;
+  font-size: 16px !important;
 }
